# swarm-final-zkm

./: .gitignore  CMakeLists.txt  README  SFoodItem.h  footbot_foraging.cpp  footbot_foraging.h  foraging.argos  foraging_loop_functions.cpp  foraging_loop_functions.h  foraging_qt_user_functions.cpp
controllers/footbot_foraging/: footbot_foraging.cpp  footbot_foraging.h
experiments/: foraging.argos
final_runs/best/: a10_b1.txt  a10_b5.txt  a20_b1.txt  a5_b1.txt  a5_b4.txt  base.txt  plotReward.py
final_runs/best/a10b1/: alpha-10-beta-1.txt  average.py  foraging_best_algo_a10b1_2.txt  foraging_best_algo_a10b1_3.txt  foraging_best_algo_a10b1_4.txt  foraging_best_algo_a10b1_5.txt
final_runs/best/a10b5/: alpha-10-beta-5.txt  foraging_best_algo_a10b5_2.txt  foraging_best_algo_a10b5_3.txt  foraging_best_algo_a10b5_4.txt  foraging_best_algo_a10b5_5.txt
final_runs/best/a20b1/: alpha-20-beta-1.txt  foraging_best_algo_a20b1_2.txt  foraging_best_algo_a20b1_3.txt  foraging_best_algo_a20b1_4.txt  foraging_best_algo_a20b1_5.txt
final_runs/best/a5b1/: alpha-5-beta-1.txt  average.py  foraging_best_algo_a5b1_2.txt  foraging_best_algo_a5b1_3.txt  foraging_best_algo_a5b1_4.txt  foraging_best_algo_a5b1_5.txt
final_runs/closest/: a10_b1.txt  a10_b5.txt  a20_b1.txt  a5_b1.txt  a5_b4.txt  base.txt  plotClosest.py
final_runs/random/: a10_b1.txt  a10_b5.txt  a20_b1.txt  a5_b1.txt  a5_b4.txt  base.txt  plotRandom.py
frames/algo/: makegif.py
frames/noalgo/: makegif.py
loop_functions/foraging_loop_functions/: foraging_loop_functions.cpp  foraging_loop_functions.h
(+75 files in other folders)
